[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/menu/menu_card.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/menu/menu_cards/main_menu_card.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/menu_card.tres" type="Theme" id=3]
[ext_resource path="res://resources/textures/identity/logo.png" type="Texture" id=4]
[ext_resource path="res://gui/menu/menu_list.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/menu/menu_rows/button_menu_row.tscn" type="PackedScene" id=6]

[node name="MainMenuCard" instance=ExtResource( 1 )]
theme = ExtResource( 3 )
script = ExtResource( 2 )
_is_manually_poppable = false
_menu_list_path = NodePath("CenterContainer/VBoxContainer/MenuList")
_tooltip_label_path = NodePath("TooltipLabel")

[node name="TooltipLabel" type="Label" parent="." index="1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -32.0
margin_right = -8.0
margin_bottom = -8.0
rect_min_size = Vector2( 624, 24 )
size_flags_horizontal = 0
size_flags_vertical = 0
valign = 2
__meta__ = {
"_edit_lock_": true
}

[node name="VersionLabel" type="Label" parent="." index="2"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 32.0
rect_min_size = Vector2( 624, 24 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "LABEL.VERSION"
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="." index="3"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="0"]
margin_left = 64.0
margin_top = 32.0
margin_right = 576.0
margin_bottom = 328.0
alignment = 1

[node name="LogoRect" type="TextureRect" parent="CenterContainer/VBoxContainer" index="0"]
margin_right = 512.0
margin_bottom = 64.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="LogoSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer" index="1"]
margin_top = 68.0
margin_right = 512.0
margin_bottom = 72.0

[node name="MenuList" parent="CenterContainer/VBoxContainer" index="2" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 76.0
margin_right = 512.0
margin_bottom = 288.0

[node name="ContinueGameButton" parent="CenterContainer/VBoxContainer/MenuList" index="0" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_right = 512.0
appearance_condition = 6
tooltip = "TOOLTIP.BUTTON.CONTINUE_GAME"
text = "BUTTON.CONTINUE_GAME"
icon = "load"
press_sound = 1

[node name="NewGameButton" parent="CenterContainer/VBoxContainer/MenuList" index="1" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_top = 36.0
margin_right = 512.0
margin_bottom = 68.0
tooltip = "TOOLTIP.BUTTON.NEW_GAME"
text = "BUTTON.NEW_GAME"
icon = "next"
press_sound = 1

[node name="SettingsButton" parent="CenterContainer/VBoxContainer/MenuList" index="2" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_top = 72.0
margin_right = 512.0
margin_bottom = 104.0
tooltip = "TOOLTIP.BUTTON.SETTINGS"
text = "BUTTON.SETTINGS"
icon = "settings"
press_sound = 1

[node name="CreditsButton" parent="CenterContainer/VBoxContainer/MenuList" index="3" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_top = 108.0
margin_right = 512.0
margin_bottom = 140.0
tooltip = "TOOLTIP.BUTTON.CREDITS"
text = "BUTTON.CREDITS"
icon = "credits"
press_sound = 1

[node name="DevlogButton" parent="CenterContainer/VBoxContainer/MenuList" index="4" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_top = 144.0
margin_right = 512.0
margin_bottom = 176.0
tooltip = "TOOLTIP.BUTTON.DEVLOG"
text = "BUTTON.DEVLOG"
icon = "credits"
press_sound = 1

[node name="QuitGameButton" parent="CenterContainer/VBoxContainer/MenuList" index="5" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_top = 180.0
margin_right = 512.0
margin_bottom = 212.0
tooltip = "TOOLTIP.BUTTON.QUIT_GAME"
text = "BUTTON.QUIT_GAME"
icon = "quit"
press_sound = 0

[node name="MenuSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer" index="3"]
margin_top = 292.0
margin_right = 512.0
margin_bottom = 296.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/SettingsButton" to="." method="request_push" binds= [ "settings" ]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/DevlogButton" to="." method="_on_devlog_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
